# DEX-Gram

./: .gitignore  .replit  Cargo.toml  README.md  build.rs  h origin master  replit.md
.github/workflows/: android.yml
bootstrap-server/: README.md
bootstrap-server/src/: main.rs
frontend-development/app/: globals.css  layout.tsx  page.tsx
frontend-development/components/messenger/: add-contact-dialog.tsx  avatar.tsx  connection-banner.tsx  contact-list.tsx  conversation.tsx  identity-dialog.tsx  messenger-app.tsx  modal.tsx  settings-dialog.tsx  theme-toggle.tsx
frontend-development/lib/: messenger-utils.ts  tauri.ts
messenger-backend/: Cargo.toml
messenger-backend/src/: constants.rs  lib.rs  main.rs  types.rs
messenger-backend/src/config/: mod.rs  settings.rs
messenger-backend/src/crypto/: pow.rs
messenger-backend/src/network/: dispatcher.rs  p2p.rs  transport.rs
messenger-backend/src/network/dht/: publish.rs
messenger-backend/src/network/mailbox/: cleanup.rs
messenger-backend/src/network/onion/: decrypt.rs  encrypt.rs
messenger-backend/src/network/relay/: mod.rs  registry.rs  router.rs  scoring.rs  static_source.rs
messenger-backend/src/protocol/: mod.rs
messenger-backend/src/services/: dummy.rs  mod.rs  sync.rs
messenger-backend/src/session/: mod.rs
messenger-backend/src/storage/: mailbox_store.rs  mod.rs  session_store.rs
messenger-backend/tests/: integration.rs
messenger/.github/workflows/: android.yml
messenger/bootstrap-server/: Cargo.toml
messenger/frontend-development/: package.json  pnpm-lock.yaml
messenger/frontend-development/app/: layout.tsx
messenger/frontend-development/components/messenger/: copyable.tsx
messenger/frontend-development/lib/: tauri.ts
messenger/messenger-backend/src/: main.rs
messenger/messenger-backend/src/config/: settings.rs
messenger/messenger-backend/src/network/: p2p.rs
messenger/messenger-backend/src/services/: background.rs
messenger/messenger-backend/src/session/: manager.rs  state.rs
messenger/messenger-backend/src/storage/: db.rs
messenger/src-tauri/: Cargo.toml  tauri.conf.json
messenger_src/: Cargo.toml
messenger_src/frontend/: index.html
messenger_src/messenger-backend/src/: main.rs
messenger_src/src-tauri/: Cargo.toml  tauri.conf.json
messenger_src/src-tauri/src/: lib.rs  main.rs
src/: cli.rs  errors.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/crypto/: mod.rs  ratchet.rs  x3dh.rs
src/identity/: mod.rs
src/network/: p2p.rs
src/network/dht/: mod.rs  record.rs
src/network/mailbox/: mod.rs  storage.rs
src/services/: bootstrap.rs  mod.rs
src/storage/: db.rs
(+13 files in other folders)
