[package]
name = "messenger-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- P2P / networking ---
libp2p = { version = "0.53", features = [
    "kad",
    "noise",
    "yamux",
    "tcp",
    "quic",
    "relay",
    "dcutr",
    "identify",
    "ping",
    "macros",
    "tokio",
    "request-response",
] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# --- Crypto ---
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
rand_core = "0.6"
argon2 = "0.5"          # для proof-of-work / key stretching
zeroize = "1"           # обнуление ключей в памяти

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.12"          # protobuf runtime
bincode = "1"

# --- HTTP client (bootstrap /relays fetch) ---
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }

# --- Storage ---
rusqlite = { version = "0.31", features = ["bundled"] }

# --- Misc ---
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
bs58 = "0.5"            # base58 для UserID (читаемые ID как в криптокошельках)
uuid = { version = "1", features = ["v4"] }
bip39 = "2"             # recovery phrase (12/24 слова)

[build-dependencies]
prost-build = "0.12"

[profile.release]
lto = true
opt-level = 3
