[package]
name = "bootstrap-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap-server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tower-http = { version = "0.5", features = ["cors"] }

[profile.release]
lto = true
opt-level = 3
strip = true
codegen-units = 1
panic = "abort"
