[package]
name = "messenger-app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
messenger-backend = { path = "../messenger-backend" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

[lib]
name = "messenger_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "messenger-app"
path = "src/main.rs"
